fixed font size on mobile

--- a/style.scss
+++ b/style.scss
@@ -50,7 +50,7 @@ header {
   padding: 30px;
   h2 {
     color: var(--darkGrayCyan);
-    font-size: 12px;
+    font-size: 15px;
   }
   input[type="radio"] {
     display: none;
@@ -158,7 +158,7 @@ header {
       justify-content: space-between;
       align-items: center;
       h2 {
-        font-size: 12px;
+        font-size: 15px;
         line-height: 0px;
         color: var(--white);
       }
